# pslg-triangulation

./: .gitignore  CMakeLists.txt  README.md  input_sa.json
CG:SHOP-solutions/: ortho_100_bd1e4a14.instance_output.json  ortho_10_d2723dcc.instance_output.json  ortho_150_53eb4022.instance_output.json  ortho_20_5a9e8244.instance_output.json  ortho_20_e2aff192.instance_output.json  ortho_250_3b977f7e.instance_output.json  ortho_250_6e6a66c2.instance_output.json  ortho_40_56a6f463.instance_output.json  ortho_40_df58ce3b.instance_output.json  ortho_60_5c5796a0.instance_output.json  ortho_60_c423f527.instance_output.json  ortho_60_f744490d.instance_output.json  ortho_80_06ee55d4.instance_output.json  point-set_100_0245ce31.instance_output.json  point-set_100_05594822.instance_output.json  point-set_100_dd67678e.instance_output.json  point-set_10_13860916.instance_output.json  point-set_10_4bcb7c21.instance_output.json  point-set_10_7451a2a9.instance_output.json  point-set_10_97578aae.instance_output.json  point-set_10_ae0fff93.instance_output.json  point-set_10_c04b0024.instance_output.json  point-set_10_d009159f.instance_output.json  point-set_10_f999dc7f.instance_output.json  point-set_150_1fb326cf.instance_output.json  point-set_150_20bcb550.instance_output.json  point-set_150_982c9ab3.instance_output.json  point-set_150_b26a2c80.instance_output.json  point-set_20_0c4009d9.instance_output.json  point-set_20_34a047f7.instance_output.json  point-set_20_41c48315.instance_output.json  point-set_20_54ab0b47.instance_output.json  point-set_20_5868538a.instance_output.json  (+117 more)
(+162 files in other folders)
